> Added method to get single entry in entry_controller > Created ViewJournalActivity to view individual journal > Added onClickListener to open ViewJournalActivity for individual items in EntryListAdapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Activities.ViewJournalActivity"
+            android:label="@string/view_activity_title"
+            android:parentActivityName=".Activities.MainActivity" />
+        <activity
             android:name=".Activities.NewJournalActivity"
             android:label="@string/new_journal_activity_title"
             android:parentActivityName=".Activities.MainActivity" />
